k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multitier
  labels:
    app.kubernetes.io/part-of: multitier-demo
