k8s/08-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: multitier
  labels:
    app: api
    app.kubernetes.io/part-of: multitier-demo
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
